--- a/08_Nature-weekend/scss/components/_book.scss
+++ b/08_Nature-weekend/scss/components/_book.scss
@@ -5,7 +5,7 @@
     padding: 6rem;
 
      .heading-secondary {
-      background-image: linear-gradient(to right, rgba(#fff, .9),rgba(#000, .4));
+      background-image: linear-gradient(to right, rgba(#fff, .9),rgba(#FFFF00, .4));
     }
   }
 }
