--- a/08_Nature-weekend/scss/components/_footer.scss
+++ b/08_Nature-weekend/scss/components/_footer.scss
@@ -3,6 +3,10 @@
   padding: 5rem 0;
   font-size: 1.4rem;
 
+  @include respond(tab-port) {
+    padding: 3rem 0;
+  }
+
   &__logo-box {
     //margin: 0 auto;
     text-align: center;
@@ -66,4 +70,46 @@
     padding-top: 2rem;
     float: right;
   }
+}
+
+.social {
+  width: 50%;
+  margin: 0 auto;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+
+  &__item {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: rgba(255,255,255, .6);
+    position: relative;
+    cursor: pointer;
+    transition: all .2s;
+
+    &:hover {
+      background-color: rgba(255,255,255, .9);
+    }
+
+    &:hover .fab {
+      color: rgba(15,80,73, .8);
+    }
+  }
+
+  &__link {
+    display: inline-block;
+    width: 100%;
+    height: auto;
+  }
+}
+
+.fab {
+  text-decoration: none;
+  color: #6D6323;
+  font-size: 180%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
