--- a/08_Nature-weekend/css/main.css
+++ b/08_Nature-weekend/css/main.css
@@ -290,6 +290,20 @@ button.btn--white {
     animation-duration: .6s;
     animation-delay: .5s; }
 
+.col-1-of-4.feature-box__wrap:not(:last-child) {
+  margin-bottom: 3rem; }
+@media (max-width: 900px) {
+  .col-1-of-4.feature-box__wrap {
+    width: 100%;
+    padding: 0 8rem; } }
+
+.col-1-of-3.card__wrap:not(:last-child) {
+  margin-bottom: 3rem; }
+@media (max-width: 900px) {
+  .col-1-of-3.card__wrap {
+    width: 100%;
+    padding: 0 8rem; } }
+
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
@@ -340,6 +354,9 @@ button.btn--white {
     position: absolute;
     top: 32%;
     left: 2%; }
+    @media (max-width: 900px) {
+      .card__heading {
+        font-size: 220%; } }
   .card__details ul {
     text-align: center;
     list-style: none;
@@ -351,6 +368,10 @@ button.btn--white {
       padding: .8rem; }
       .card__details ul li:not(:last-child) {
         border-bottom: 1px solid #E4E4E4; }
+      @media (max-width: 900px) {
+        .card__details ul li {
+          font-size: 180%;
+          padding: .6rem 0; } }
   .card__cta {
     position: absolute;
     top: 50%;
@@ -447,11 +468,17 @@ button.btn--white {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
-.book__form {
-  width: 50%;
-  padding: 6rem; }
-  .book__form .heading-secondary {
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(0, 0, 0, 0.4)); }
+.book {
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+  .book__form {
+    width: 50%;
+    padding: 6rem; }
+    @media (max-width: 900px) {
+      .book__form {
+        padding: 2rem; } }
+    .book__form .heading-secondary {
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 0, 0.4)); }
 
 .form__group:not(:last-child) {
   margin-bottom: 2rem; }
@@ -524,12 +551,18 @@ button.btn--white {
   background-color: #0F5049;
   padding: 5rem 0;
   font-size: 1.4rem; }
+  @media (max-width: 900px) {
+    .footer {
+      padding: 3rem 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 4rem; }
   .footer__logo {
     width: 10rem;
     height: auto; }
+    @media (max-width: 900px) {
+      .footer__logo {
+        width: 13rem; } }
   .footer__navigation {
     border-top: 1px solid #6E6226;
     border-bottom: 1px solid #6E6226;
@@ -559,6 +592,47 @@ button.btn--white {
     border-top: 1px solid #6E6226;
     padding-top: 2rem;
     float: right; }
+
+.social {
+  width: 50%;
+  margin: 0 auto;
+  list-style: none;
+  display: flex;
+  justify-content: space-between; }
+  @media (max-width: 600px) {
+    .social {
+      width: 65%; } }
+  .social__item {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.6);
+    position: relative;
+    cursor: pointer;
+    transition: all .2s; }
+    @media (max-width: 600px) {
+      .social__item {
+        margin-right: 0; } }
+    .social__item:hover {
+      background-color: rgba(255, 255, 255, 0.9); }
+    .social__item:hover .fab {
+      color: rgba(15, 80, 73, 0.8); }
+  .social__link {
+    display: inline-block;
+    width: 100%;
+    height: auto; }
+    @media (max-width: 600px) {
+      .social__link {
+        font-size: 1.8rem; } }
+
+.fab {
+  text-decoration: none;
+  color: #6D6323;
+  font-size: 180%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
 
 .navigation__checkbox {
   display: none; }
@@ -660,9 +734,18 @@ body {
 
 html {
   font-size: 62.5%; }
-  @media (max-width: 600px) {
+  @media (max-width: 1200px) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 900px) {
     html {
       font-size: 50%; } }
+  @media (max-width: 600px) {
+    html {
+      font-size: 45%; } }
+  @media (min-width: 1800px) {
+    html {
+      font-size: 75%; } }
 
 /*-----------------------HEADER------------------------*/
 .header {
@@ -672,6 +755,14 @@ html {
   background-position: center;
   -webkit-clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
   clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%, 0 0); }
+  @media (max-width: 900px) {
+    .header {
+      -webkit-clip-path: polygon(100% 0, 100% 95%, 50% 100%, 0 95%, 0 0);
+      clip-path: polygon(100% 0, 100% 95%, 50% 100%, 0 95%, 0 0); } }
+  @media (max-width: 600px) {
+    .header {
+      -webkit-clip-path: polygon(100% 0, 100% 95%, 50% 100%, 0 95%, 0 0);
+      clip-path: polygon(100% 0, 100% 95%, 50% 100%, 0 95%, 0 0); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -692,9 +783,23 @@ html {
   background-color: #e6ffe6;
   padding: 20rem 0;
   margin-top: -20vh; }
+  @media (max-width: 900px) {
+    .section-about {
+      padding: 25rem 0 10rem 0; } }
+  @media (max-width: 600px) {
+    .section-about {
+      padding: 25rem 0 10rem 0; } }
 
 .composition {
-  position: relative; }
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0 5rem; }
+  @media (max-width: 900px) {
+    .composition {
+      width: 200%;
+      margin: 0 auto;
+      padding: 5rem; } }
   .composition__photo {
     width: 55%;
     box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
@@ -703,16 +808,33 @@ html {
     transition: all .3s;
     outline-offset: 1rem;
     outline: 1.5rem solid transparent; }
+    @media (max-width: 900px) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.33333%; } }
     .composition__photo--p1 {
       top: 0;
       left: 0;
       z-index: 1; }
+      @media (max-width: 900px) {
+        .composition__photo--p1 {
+          top: 0; } }
     .composition__photo--p2 {
       right: 0;
       top: 4em; }
+      @media (max-width: 900px) {
+        .composition__photo--p2 {
+          top: 0;
+          left: 2em;
+          transform: scale(1.1); } }
     .composition__photo--p3 {
       top: 15em;
       left: 10em; }
+      @media (max-width: 900px) {
+        .composition__photo--p3 {
+          top: 0;
+          left: 4em; } }
     .composition__photo:hover {
       z-index: 10;
       outline: 1.5rem solid #fff;
@@ -720,6 +842,12 @@ html {
       box-shadow: 0 2.5rem 3.5rem rgba(0, 0, 0, 0.2); }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.92); }
+
+@media (max-width: 900px) {
+  .col-1-of-2.bg-left {
+    display: block;
+    width: 90%;
+    padding: 0 5rem; } }
 
 /*----------------Section-Features-------------------*/
 .section-features {
@@ -729,9 +857,17 @@ html {
   background-position: center;
   -webkit-clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
   clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%, 0 0); }
+  @media (max-width: 900px) {
+    .section-features {
+      padding: 10rem 0 10rem 0;
+      -webkit-clip-path: polygon(100% 0, 100% 92%, 50% 100%, 0 92%, 0 0);
+      clip-path: polygon(100% 0, 100% 92%, 50% 100%, 0 92%, 0 0); } }
 
 .section-tours {
   padding: 10rem 0; }
+  @media (max-width: 900px) {
+    .section-tours {
+      padding: 8rem 0 10rem 0; } }
 
 /*----------------Section-Cards-------------------*/
 .card__picture--1 {
@@ -758,17 +894,22 @@ html {
   background-attachment: fixed;
   position: relative;
   overflow-x: hidden; }
+  @media (max-width: 900px) {
+    .section-stories {
+      padding: 10rem 0 10rem 0; } }
 
 /*----------------------Section-book------------------------*/
 .section-book {
-  padding: 15rem 0px;
-  background-image: linear-gradient(to right bottom, #3F9709, #4BEB42); }
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, orange, yellow); }
+  @media (max-width: 900px) {
+    .section-book {
+      padding: 9rem 0; } }
 
 .book {
-  background-image: linear-gradient(100deg, rgba(75, 235, 66, 0.9) 0%, rgba(75, 235, 66, 0.8) 47%, rgba(204, 204, 204, 0.8) 50%), url("../img/bg-book.jpg");
-  background-size: 100%;
-  height: 50rem;
-  border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+  background-image: linear-gradient(100deg, rgba(75, 235, 66, 0.9) 0%, rgba(75, 235, 66, 0.8) 47%, rgba(255, 255, 255, 0.4) 50%), url("../img/bg-book.jpg");
+  background-size: 100%; }
+
+/*----------------------Adaptiv------------------------*/
 
 /*# sourceMappingURL=main.css.map */
