--- a/08_Nature-weekend/css/main.scss
+++ b/08_Nature-weekend/css/main.scss
@@ -31,10 +31,22 @@ body {
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%
+
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1rem = 9px; 9/16 = 50%
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%; // 1rem = 8px; 8/16 = 50%
+  }
 
   @include respond(phone) {
-    font-size: 50%;
+    font-size: 45%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; //1rem = 12, 12/16
   }
 }
 
@@ -55,6 +67,17 @@ html {
   -webkit-clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
   clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
 
+  @include respond(tab-port) {
+    -webkit-clip-path: polygon(100% 0, 100% 95%, 50% 100%, 0 95%, 0 0);
+    clip-path: polygon(100% 0, 100% 95%, 50% 100%, 0 95%, 0 0);
+  }
+
+  @include respond(phone) {
+    -webkit-clip-path: polygon(100% 0, 100% 95%, 50% 100%, 0 95%, 0 0);
+    clip-path: polygon(100% 0, 100% 95%, 50% 100%, 0 95%, 0 0);
+  }
+
+
 
   &__logo-box {
     position: absolute;
@@ -74,6 +97,7 @@ html {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+
 }
 
 /*----------------------Section-ABOUT------------------------*/
@@ -82,10 +106,29 @@ html {
   background-color: #e6ffe6;
   padding: 20rem 0;
   margin-top: -20vh;
+
+  @include respond(tab-port) {
+    padding: 25rem 0 10rem 0;
+  }
+
+  @include respond(phone) {
+    padding: 25rem 0 10rem 0;
+  }
 }
 
 .composition {
   position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0 5rem;
+
+  @include respond(tab-port) {
+    width: 200%;
+
+    margin: 0 auto;
+    padding: 5rem;
+  }
+
 
   &__photo {
     width: 55%;
@@ -96,20 +139,41 @@ html {
     outline-offset: 1rem;
     outline: 1.5rem solid transparent;
 
+    @include respond(tab-port) {
+      float: left;
+      position: relative;
+      width: 33.33333%;
+    }
+
     &--p1 {
       top: 0;
       left: 0;
       z-index: 1;
+
+      @include respond(tab-port) {
+        top: 0;
+      }
     }
 
     &--p2 {
       right: 0;
       top: 4em;
+
+      @include respond(tab-port) {
+        top: 0;
+        left: 2em;
+        transform: scale(1.1);
+      }
     }
 
     &--p3 {
       top: 15em;
       left: 10em;
+
+      @include respond(tab-port) {
+        top: 0;
+        left: 4em;
+      }
     }
 
     &:hover {
@@ -125,6 +189,15 @@ html {
   }
 }
 
+.col-1-of-2.bg-left {
+  @include respond(tab-port) {
+    display: block;
+    width: 90%;
+
+    padding: 0 5rem;
+  }
+}
+
 /*----------------Section-Features-------------------*/
 
 .section-features {
@@ -137,12 +210,23 @@ html {
   background-size: cover;
   background-position: center;
 
-  -webkit-clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+  -webkit-clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%,0 0);
   clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+
+  @include respond(tab-port) {
+    padding: 10rem 0 10rem 0;
+
+    -webkit-clip-path: polygon(100% 0, 100% 92%, 50% 100%, 0 92%,0 0);
+    clip-path: polygon(100% 0, 100% 92%, 50% 100%, 0 92%, 0 0);
+  }
 }
 
 .section-tours {
   padding: 10rem 0;
+
+  @include respond(tab-port) {
+    padding: 8rem 0 10rem 0;
+  }
 }
 
 /*----------------Section-Cards-------------------*/
@@ -183,23 +267,34 @@ html {
   background-attachment: fixed;
   position: relative;
   overflow-x: hidden;
+
+  @include respond(tab-port) {
+    padding: 10rem 0 10rem 0;
+  }
 }
 
 /*----------------------Section-book------------------------*/
 
 .section-book {
-  padding: 15rem 0px;
-  background-image: linear-gradient(to right bottom, #3F9709, #4BEB42);
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, orange, yellow);
+
+  @include respond(tab-port) {
+    padding: 9rem 0;
+  }
 }
 
 .book {
   background-image: linear-gradient(100deg,
           rgba(#4BEB42, .9) 0%,
           rgba(#4BEB42, .8) 47%,
-          rgba(#ccc, .8) 50%),
+          rgba(#fff, .4) 50%),
+
   url("../img/bg-book.jpg");
   background-size: 100%;
-  height: 50rem;
-  border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(#000, .15);
 }
+
+/*----------------------Adaptiv------------------------*/
+
+
+
