--- a/08_Nature-weekend/scss/components/_footer.scss
+++ b/08_Nature-weekend/scss/components/_footer.scss
@@ -16,6 +16,10 @@
   &__logo {
     width: 10rem;
     height: auto;
+
+    @include respond(tab-port) {
+      width: 13rem;
+    }
   }
 
   &__navigation {
@@ -79,6 +83,10 @@
   display: flex;
   justify-content: space-between;
 
+  @include respond(phone) {
+    width: 65%;
+  }
+
   &__item {
     width: 4rem;
     height: 4rem;
@@ -87,6 +95,10 @@
     position: relative;
     cursor: pointer;
     transition: all .2s;
+
+    @include respond(phone) {
+      margin-right: 0;
+    }
 
     &:hover {
       background-color: rgba(255,255,255, .9);
@@ -101,6 +113,10 @@
     display: inline-block;
     width: 100%;
     height: auto;
+
+    @include respond(phone) {
+      font-size: 1.8rem;
+    }
   }
 }
 
