--- a/15-zeplin-appStarter/scss/components/_chess.scss
+++ b/15-zeplin-appStarter/scss/components/_chess.scss
@@ -8,6 +8,12 @@
   height: 118rem;
   box-shadow: 0 6px 12px 0 rgba(32, 33, 39, 0.08);
 
+  &::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+
   &__block {
     float: left;
     width: 50%;
