--- a/15-zeplin-appStarter/scss/main.css
+++ b/15-zeplin-appStarter/scss/main.css
@@ -79,7 +79,7 @@ body {
       box-shadow: 0 6px 12px 0 rgba(40, 43, 49, 0.08); }
   .header--burger {
     cursor: pointer;
-    background-color: rgba(31, 31, 31, 0.4);
+    background-color: rgba(40, 43, 49, 0.4);
     width: 1.6rem;
     height: 1.2rem; }
     .header--burger:hover {
@@ -150,7 +150,7 @@ body {
   line-height: 1.88;
   color: rgba(255, 255, 255, 0.8); }
 
-.chess-ph {
+.chess-ph, .video-ph, .card-form__label {
   font-family: 'Nunito Sans', sans-serif;
   font-size: 16px;
   line-height: 1.88;
@@ -164,6 +164,13 @@ body {
 .chess-ph--white span {
   display: block;
   font-weight: bold; }
+
+.video-ph {
+  color: rgba(255, 255, 255, 0.6); }
+
+.card-ph {
+  text-align: left;
+  margin-bottom: 2rem; }
 
 .btn,
 .btn:link,
@@ -192,6 +199,14 @@ body {
   color: #fff;
   background-image: linear-gradient(107deg, #ff8e64, #ffe641);
   margin-right: 2rem; }
+  .btn--orange-wide {
+    width: 100%;
+    margin-right: 0; }
+
+.btn--green {
+  width: 100%;
+  color: #fff;
+  background-image: linear-gradient(107deg, #03A3C4, #35E2B2); }
 
 .btn--buy {
   letter-spacing: .1rem;
@@ -211,46 +226,17 @@ body {
     text-align: center;
     text-transform: capitalize; }
 
-button.btn--white {
-  margin-top: 2rem;
-  background-image: linear-gradient(to right, #EAFBE9, #70B16A);
-  color: #fff;
+button.btn--blue {
+  background-image: linear-gradient(to right bottom, #7956ec, #2fb9f8);
+  color: rgba(255, 255, 255, 0.8);
   cursor: pointer;
-  font-weight: 400;
-  outline: none; }
-
-.btn--green {
-  background-color: #51E424;
-  color: #fff; }
-
-.btn--text:link,
-.btn--text:visited {
-  display: inline-block;
-  text-decoration: none;
-  font-weight: 300;
-  font-size: 1.8rem;
-  color: forestgreen;
-  background-color: transparent;
-  border-bottom: 2px solid forestgreen;
-  padding: .3rem .6rem;
-  transition: all .2s; }
-  .btn--text:link:hover,
-  .btn--text:visited:hover {
-    background-color: forestgreen;
-    color: #fff;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-    transform: translateY(-2px); }
-  .btn--text:link:active,
-  .btn--text:visited:active {
-    box-shadow: 0 0.2rem 0.7rem rgba(0, 0, 0, 0.2); }
-
-.btn--text-story:link,
-.btn--text-story:visited {
-  color: #fff;
-  border-bottom: 2px solid #fff; }
-  .btn--text-story:link:hover,
-  .btn--text-story:visited:hover {
-    border-bottom: 2px solid transparent; }
+  font-weight: 700;
+  width: 13rem;
+  height: 4rem;
+  outline: none;
+  font-size: 1.4rem;
+  padding: 1rem;
+  letter-spacing: 1px; }
 
 .section-about {
   padding: 24.9rem 0 14.1rem 0;
@@ -285,6 +271,8 @@ button.btn--white {
   .about-box:hover {
     border-radius: 12px;
     background-color: #ffffff;
+    -webkit-box-shadow: 0 6px 12px 0 rgba(32, 33, 39, 0.08);
+    -moz-box-shadow: 0 6px 12px 0 rgba(32, 33, 39, 0.08);
     box-shadow: 0 6px 12px 0 rgba(32, 33, 39, 0.08); }
 .about__icon {
   text-align: center;
@@ -314,6 +302,10 @@ button.btn--white {
   width: 100%;
   height: 118rem;
   box-shadow: 0 6px 12px 0 rgba(32, 33, 39, 0.08); }
+  .chess::after {
+    content: "";
+    display: block;
+    clear: both; }
   .chess__block {
     float: left;
     width: 50%;
@@ -338,12 +330,305 @@ button.btn--white {
     width: 95%;
     height: auto; }
 
+.section-video {
+  padding: 11.3rem 0; }
+
+.video {
+  width: 51.77%;
+  margin: 0 auto; }
+  .video__text-box {
+    width: 100%;
+    text-align: center; }
+    .video__text-box > .heading-primary {
+      margin-bottom: 1.7rem; }
+  .video__button-box {
+    text-align: center; }
+  .video__icon {
+    display: inline-block;
+    width: 7rem;
+    height: 7rem;
+    margin-top: 5.1rem;
+    border-radius: 50%;
+    background-color: #fff;
+    position: relative; }
+    .video__icon:hover {
+      -webkit-box-shadow: 1px 2px 20px -2px rgba(0, 0, 0, 0.25);
+      -moz-box-shadow: 1px 2px 20px -2px rgba(0, 0, 0, 0.25);
+      box-shadow: 1px 2px 20px -2px rgba(0, 0, 0, 0.25);
+      -webkit-transition: all .2s;
+      -moz-transition: all .2s;
+      -ms-transition: all .2s;
+      -o-transition: all .2s;
+      transition: all .2s;
+      background-color: rgba(255, 255, 255, 0.8); }
+    .video__icon::after {
+      content: "";
+      border: 1.2rem solid transparent;
+      border-left: 2rem solid orange;
+      position: absolute;
+      border-radius: 2px;
+      top: 50%;
+      left: 60%;
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+
+.section-card {
+  padding: 12rem 0; }
+
+.card::after {
+  content: "";
+  display: block;
+  clear: both; }
+.card__left, .card__right {
+  float: left; }
+.card__left {
+  width: 32.46%;
+  margin-right: 11.4%; }
+.card__right {
+  width: 56.14%; }
+.card__text-box {
+  width: 100%; }
+.card-form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+.card-form__input {
+  width: 20.6rem;
+  height: 4rem;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  margin-right: 1.2rem;
+  padding-left: 1rem;
+  -webkit-box-shadow: 1px 2px 20px -2px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 1px 2px 20px -2px rgba(0, 0, 0, 0.25);
+  box-shadow: 1px 2px 20px -2px rgba(0, 0, 0, 0.25);
+  -webkit-transition: all .2s;
+  -moz-transition: all .2s;
+  -ms-transition: all .2s;
+  -o-transition: all .2s;
+  transition: all .2s; }
+  .card-form__input:hover {
+    -webkit-box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.5); }
+.card-form__label {
+  margin-right: 1.2rem; }
+  .card-form__label--block {
+    display: block;
+    text-align: left; }
+.card-form__select {
+  display: inline-block;
+  width: 8.9rem;
+  height: 4rem;
+  color: #3E3E3E;
+  outline: none;
+  text-decoration: none;
+  border: none;
+  border-radius: 3px;
+  padding-left: 1rem;
+  -webkit-box-shadow: 1px 2px 20px -2px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 1px 2px 20px -2px rgba(0, 0, 0, 0.25);
+  box-shadow: 1px 2px 20px -2px rgba(0, 0, 0, 0.25);
+  -webkit-transition: all .2s;
+  -moz-transition: all .2s;
+  -ms-transition: all .2s;
+  -o-transition: all .2s;
+  transition: all .2s; }
+  .card-form__select:hover {
+    -webkit-box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.5); }
+.card__wrap {
+  width: 100%;
+  display: flex;
+  align-items: center; }
+.card__side {
+  width: 53%;
+  height: 51rem;
+  border-radius: .6rem;
+  transition: all .7s ease;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  padding: 5rem 0;
+  text-align: center;
+  color: #fff; }
+  .card__side:hover {
+    -webkit-transform: translateY(-0.4rem);
+    -moz-transform: translateY(-0.4rem);
+    -ms-transform: translateY(-0.4rem);
+    -o-transform: translateY(-0.4rem);
+    transform: translateY(-0.4rem);
+    -webkit-box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.5); }
+  .card__side--white {
+    height: 47rem;
+    background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9));
+    width: 47%;
+    color: #282B31; }
+.card__heading {
+  display: block;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 2px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-top: 1px solid #f2f4f4;
+  border-bottom: 1px solid #f2f4f4;
+  padding: 1.3rem 0; }
+.card__half {
+  padding: 3rem 5rem; }
+.card__details {
+  margin-bottom: 3rem; }
+  .card__details ul {
+    text-align: left;
+    list-style: none;
+    width: 100%;
+    margin: 0 auto; }
+    .card__details ul li {
+      font-size: 1.5rem;
+      padding: .6rem; }
+.card__price-box {
+  text-align: center;
+  color: yellow;
+  margin-bottom: 8rem; }
+.card__price-only {
+  font-size: 1.4rem;
+  text-transform: uppercase; }
+.card__price-value {
+  font-size: 6rem;
+  font-weight: 100; }
+
+::-webkit-input-placeholder {
+  color: rgba(103, 108, 117, 0.5);
+  font-size: 1.4rem; }
+
+::-moz-placeholder {
+  color: rgba(103, 108, 117, 0.5);
+  font-size: 1.4rem; }
+
+:-moz-placeholder {
+  color: rgba(103, 108, 117, 0.5);
+  font-size: 1.4rem; }
+
+:-ms-input-placeholder {
+  color: rgba(103, 108, 117, 0.5);
+  font-size: 1.4rem; }
+
+.section-form {
+  padding: 11.3rem 0; }
+
+.form__text-box {
+  width: 50%;
+  text-align: center;
+  margin: 0 auto 6rem auto; }
+.form__select {
+  color: #b9bdc3;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.7rem;
+  height: 5rem; }
+
+.contact-form {
+  width: 60%;
+  margin: 0 auto;
+  text-align: left;
+  font-size: 1.2rem;
+  background-color: #fff;
+  padding: 7rem;
+  border-radius: 12px;
+  box-shadow: 0 12px 24px 0 rgba(40, 43, 49, 0.16); }
+
+.huge-bottom {
+  margin-bottom: 25rem; }
+
+.span-1-of-2 {
+  width: 49%;
+  margin: 0;
+  float: left; }
+
+.span-1-of-2:first-child {
+  margin-right: 2%; }
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+  width: 100%;
+  padding: 1.4rem;
+  border-radius: .3rem;
+  border: 1px solid transparent;
+  margin-bottom: 4%;
+  background-color: rgba(214, 212, 223, 0.5); }
+
+input[type=submit] {
+  display: block;
+  margin: 0 auto;
+  font: 700 1.7rem 'Nunito Sans', sans-serif;
+  background-color: rgba(159, 154, 207, 0.8);
+  color: #fff;
+  letter-spacing: 1px;
+  text-transform: capitalize; }
+
+input[type=submit]:hover, .btn:hover {
+  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.15); }
+
+input[type=submit]:active, .btn:active {
+  transform: translateY(1px);
+  box-shadow: 0 10px 20px rgba(255, 255, 255, 0.3); }
+
+textarea {
+  height: 14rem;
+  outline: none;
+  -moz-appearance: none; }
+
+label {
+  line-height: 160%;
+  vertical-align: bottom; }
+
+*:focus {
+  outline: none; }
+
+input::-webkit-input-placeholder {
+  color: #b9bdc3;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.7rem; }
+
+input:-moz-placeholder {
+  color: #b9bdc3;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.7rem; }
+
+textarea::-webkit-input-placeholder {
+  color: #b9bdc3;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.7rem; }
+
+textarea:-moz-placeholder {
+  color: #b9bdc3;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.7rem; }
+
 .header {
   background-image: linear-gradient(to right bottom, rgba(122, 87, 234, 0.2), rgba(49, 185, 246, 0.2)), url("../img/header-bg.jpg");
   background-size: cover; }
 
 .section-download {
   background-image: linear-gradient(to right bottom, rgba(122, 87, 234, 0.2), rgba(49, 185, 246, 0.2)), url("../img/download-bg.png");
+  background-size: cover; }
+
+.section-video {
+  background-image: linear-gradient(to right bottom, rgba(122, 87, 234, 0.4), rgba(49, 185, 246, 0.4)), url("../img/video-tour-bg.jpg");
+  background-size: cover; }
+
+.card__side {
+  background-image: linear-gradient(to right bottom, rgba(122, 87, 234, 0.8), rgba(49, 185, 246, 0.8));
+  background-size: cover; }
+  .card__side--white {
+    background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)); }
+
+.section-form {
+  background-image: linear-gradient(to right bottom, rgba(122, 87, 234, 0.4), rgba(49, 185, 246, 0.4)), url("../img/form-bg.png");
   background-size: cover; }
 
 /*# sourceMappingURL=main.css.map */
