--- a/15-zeplin-appStarter/scss/main.scss
+++ b/15-zeplin-appStarter/scss/main.scss
@@ -8,6 +8,9 @@
 @import "components/about";
 @import "components/download";
 @import "components/chess";
+@import "components/video";
+@import "components/card";
+@import "components/form";
 
 
 
@@ -25,5 +28,35 @@
           rgba(122,87,234, .2),
           rgba(49,185,246, .2)),
   url("../img/download-bg.png");
+  background-size: cover;
+}
+
+.section-video {
+  background-image: linear-gradient( to right bottom,
+          rgba(122,87,234, .4),
+          rgba(49,185,246, .4)),
+  url("../img/video-tour-bg.jpg");
+  background-size: cover;
+}
+
+
+.card__side {
+  background-image: linear-gradient( to right bottom,
+          rgba(122,87,234, .8),
+          rgba(49,185,246, .8));
+  background-size: cover;
+
+  &--white {
+    background-image: linear-gradient( to right bottom,
+            rgba(#fff, .9),
+            rgba(#fff, .9));
+  }
+}
+
+.section-form {
+  background-image: linear-gradient( to right bottom,
+          rgba(122,87,234, .4),
+          rgba(49,185,246, .4)),
+  url("../img/form-bg.png");
   background-size: cover;
 }
