--- a/15-zeplin-appStarter/scss/settings/_variable.scss
+++ b/15-zeplin-appStarter/scss/settings/_variable.scss
@@ -1,15 +1,13 @@
 /*-*-*-----COLOR-----*-*-*/
 
 $bg-about-white: #F8F9FA;
-$bg-secondary: #EAF2F4;
 
 $heading-primary: #2C303D;
-$red: #E64C3C;
 $white: #fff;
 $hover-link-dark: #282b31;
 
 $dark: #584C40;
-$black: #1F1F1F;
+$black: #282B31;
 $grey: #989898;
 
 
