--- a/15-zeplin-appStarter/scss/main.css
+++ b/15-zeplin-appStarter/scss/main.css
@@ -36,7 +36,7 @@ body {
     float: right;
     width: 44.39%;
     margin-top: 3.5rem; }
-  .header__logo {
+  .header__logo, .footer__logo {
     width: 118px;
     height: 27px;
     font-family: inherit;
@@ -171,6 +171,9 @@ body {
 .card-ph {
   text-align: left;
   margin-bottom: 2rem; }
+
+.footer-ph {
+  margin-bottom: 1rem; }
 
 .btn,
 .btn:link,
@@ -608,6 +611,64 @@ textarea:-moz-placeholder {
   color: #b9bdc3;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 1.7rem; }
+
+.footer {
+  padding: 3rem 0 4.5rem 0; }
+  .footer__wrap {
+    height: 4rem;
+    display: flex;
+    justify-content: space-between; }
+  .footer__logo {
+    color: #282B31; }
+  .footer__desc {
+    font-size: 1.1rem;
+    text-align: center; }
+  .footer__name {
+    font-weight: bold; }
+  .footer__copy {
+    color: #999ea8; }
+
+.social {
+  list-style: none;
+  height: 100%;
+  display: flex; }
+  .social__item {
+    width: 4rem;
+    height: 100%;
+    border: 1px solid #C1C4CA;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s; }
+    .social__item--1 {
+      border-top-left-radius: .6rem;
+      border-bottom-left-radius: .6rem; }
+      .social__item--1:hover {
+        background-color: #00ACED; }
+    .social__item--2 {
+      border-bottom: transparent;
+      border-right: transparent;
+      border-left: transparent; }
+      .social__item--2:hover {
+        background-color: #3B579D; }
+    .social__item--3 {
+      border-top-right-radius: .6rem;
+      border-bottom-right-radius: .6rem; }
+      .social__item--3:hover {
+        background-color: #C63EB2; }
+  .social__link {
+    height: 100%;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .social__icon {
+    color: #C1C4CA;
+    font-size: 1.6rem; }
+  .social__icon--heart {
+    color: #FF4876;
+    font-size: 1.2rem; }
 
 .header {
   background-image: linear-gradient(to right bottom, rgba(122, 87, 234, 0.2), rgba(49, 185, 246, 0.2)), url("../img/header-bg.jpg");
