--- a/15-zeplin-appStarter/scss/components/_button.scss
+++ b/15-zeplin-appStarter/scss/components/_button.scss
@@ -12,6 +12,11 @@
   border: none;
   cursor: pointer;
   box-shadow: 0 6px 12px 0 rgba(40, 43, 49, 0.08);
+
+  @media screen and(max-width: 900px) {
+    font-size: 1.6rem;
+    padding: 1.2rem 1.3rem;
+  }
 }
 
 .btn:hover {
@@ -48,6 +53,11 @@
   text-transform: none;
   width: 17rem;
   text-align: center;
+
+  @media screen and(max-width: 1023px) {
+    margin-right: 0;
+    margin-bottom: 5%;
+  }
 }
 
 .btn--white {
