--- a/15-zeplin-appStarter/scss/components/_typography.scss
+++ b/15-zeplin-appStarter/scss/components/_typography.scss
@@ -19,13 +19,11 @@
     letter-spacing: normal;
   }
 
-  @media screen and(max-width: 1024px) {
-    font-size: 5.5rem;
+  @media screen and(max-width: 1023px) {
+    font-size: 2.6rem;
+    margin-bottom: 2.5rem;
   }
 
-  @media (max-width: 780px) {
-    font-size: 4rem;
-  }
 }
 
 
@@ -57,6 +55,10 @@
   font-size: 1.6rem;
   line-height: 1.88;
   color: rgba(255, 255, 255, 0.8);
+
+  @media screen and(max-width: 1023px) {
+    font-size: 1.5rem;
+  }
 }
 
 .chess-ph {
@@ -65,6 +67,10 @@
   line-height: 1.88;
   text-align: center;
   color: #676c75;
+
+  @media screen and(max-width: 1023px) {
+    font-size: 1.5rem;
+  }
 }
 
 .chess-ph--white {
