adaptive tablet & mobile

--- a/15-zeplin-appStarter/scss/components/_button.scss
+++ b/15-zeplin-appStarter/scss/components/_button.scss
@@ -17,7 +17,15 @@
     font-size: 1.6rem;
     padding: 1.2rem 1.3rem;
   }
+
+  @media screen and(max-width: 768px) {
+    font-size: 1.4rem;
+    padding: 1.1rem 1.2rem;
+    margin-bottom: 5%;
+  }
 }
+
+
 
 .btn:hover {
   transform: translateY(-3px);
@@ -86,4 +94,9 @@ button.btn--blue {
   font-size: 1.4rem;
   padding: 1rem;
   letter-spacing: 1px;
+
+  @media screen and(max-width: 767px) {
+    margin-top: 5%;
+  }
+
 }
