--- a/15-zeplin-appStarter/scss/_queries.scss
+++ b/15-zeplin-appStarter/scss/_queries.scss
@@ -193,9 +193,237 @@
 /* Small phone to small tablet: from 481px to 767px*/
 @media only screen and (max-width: 767px) {
 
+  p[class$="-ph"] {
+    font-size: 1.3rem;
+  }
+
+  .section-about {
+    padding: 6rem 0;
+  }
+
+  .header__item {
+    display: none;
+
+    &--burger {
+      width: 100%;
+      display: inline-block;
+      text-align: right;
+
+    }
+  }
+
+  .header__text {
+    width: 45%;
+    padding: 0 5% 5% 0;
+  }
+
+  .about {
+
+    &__left {
+      width: 43%;
+      margin-right: 2%;
+    }
+
+    &__right {
+      width: 55%;
+    }
+
+    &-box {
+      height: auto;
+    }
+
+    &__icon {
+      width: 10rem;
+    }
+
+    &__img {
+      width: 85%;
+    }
+  }
+
+  .section-chess {
+    padding: 8rem 0;
+  }
+
+  .chess {
+    height: 70rem;
+
+    &__text-box {
+      width: 90%;
+    }
+  }
+
+  .video {
+    width: 80%;
+
+    &__text-box {
+      margin-bottom: 2.5rem;
+    }
+
+    &__icon {
+      width: 5rem;
+      height: 5rem;
+
+      &::after {
+        border: 1rem solid transparent;
+        border-left: 1.5rem solid orange;
+      }
+    }
+  }
+
+  .card {
+
+    &__left {
+      width: 32%;
+      margin-right: 3%;
+    }
+
+    &__right { width: 65%; }
+
+    &-form__select,
+    &-form__input {
+      width: 40%;
+      height: 3rem;
+      padding: .3rem;
+    }
+
+    &-form__label {
+      font-size: 1.3rem;
+    }
+  }
+
+  .form {
+
+    &__text-box {
+      width: 90%;
+      margin: 0 auto 3rem auto;
+    }
+  }
 }
 
 /* Small phones: from 0 to 480px*/
 @media only screen and (max-width: 480px) {
 
+  .header {
+
+    &__text {
+      width: 100%;
+      text-align: center;
+    }
+
+    &__icon {
+      text-align: left;
+    }
+
+    &__img {
+      text-align: left;
+    }
+  }
+
+  .tablet {
+    width: 60%;
+    position: static;
+    transform: translateX(33.3%);
+  }
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__left,
+    &__right {
+      float: none;
+      width: 100%;
+    }
+
+    &-tablet {
+      width: 60%;
+      margin: 5% auto;
+    }
+  }
+
+  .download {
+
+    &__left,
+    &__right {
+      text-align: center;
+
+      float: none;
+      width: 100%;
+    }
+
+    &__left {
+      margin-bottom: 5%;
+    }
+  }
+
+  .chess {
+    height: 130rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__block {
+      width: 100%;
+      height: 30%;
+    }
+
+    &__block--grey {
+      height: 20%;
+
+      &:not(:last-child) {
+        border-bottom: 1px solid #ccc;
+      }
+    }
+  }
+
+  .video {
+    width: 90%;
+  }
+
+  .card__left,
+  .card__right {
+    float: none;
+    width: 100%;
+  }
+
+  .card-form__input {
+    width: 75%;
+
+  }
+
+  .contact-form {
+    padding: 1.5rem;
+  }
+
+  .span-1-of-2 { width: 100%; }
+
+  .footer {
+    height: 23rem;
+
+    &__wrap {
+      height: 100%;
+      float: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &::after {
+        content: "";
+        display: block;
+        clear: both;
+      }
+    }
+
+    &__logo, &__desc {
+      text-align: center;
+      font-size: 2.2rem;
+      margin-bottom: 5%;
+    }
+
+    &__social {
+      height: 4rem;
+    }
+  }
 }
