--- a/15-zeplin-appStarter/scss/components/_typography.scss
+++ b/15-zeplin-appStarter/scss/components/_typography.scss
@@ -24,6 +24,11 @@
     margin-bottom: 2.5rem;
   }
 
+  @media screen and(max-width: 767px) {
+    font-size: 2.2rem;
+    margin-bottom: 1.8rem;
+  }
+
 }
 
 
@@ -34,6 +39,10 @@
   font-weight: 300;
   line-height: 1.25;
   color: #282b31;
+
+  @media screen and(max-width: 767px) {
+    font-size: 1.4rem;
+  }
 
   &--bold {
     font-weight: 800;
