--- a/15-zeplin-appStarter/scss/main.css
+++ b/15-zeplin-appStarter/scss/main.css
@@ -125,6 +125,10 @@ body {
     .heading-primary {
       font-size: 2.6rem;
       margin-bottom: 2.5rem; } }
+  @media screen and (max-width: 767px) {
+    .heading-primary {
+      font-size: 2.2rem;
+      margin-bottom: 1.8rem; } }
 
 .heading-quaternary {
   font-family: 'Nunito Sans', sans-serif;
@@ -132,6 +136,9 @@ body {
   font-weight: 300;
   line-height: 1.25;
   color: #282b31; }
+  @media screen and (max-width: 767px) {
+    .heading-quaternary {
+      font-size: 1.4rem; } }
   .heading-quaternary--bold {
     font-weight: 800; }
   .heading-quaternary:not(:last-child) {
@@ -199,6 +206,13 @@ body {
     .btn:visited {
       font-size: 1.6rem;
       padding: 1.2rem 1.3rem; } }
+  @media screen and (max-width: 768px) {
+    .btn,
+    .btn:link,
+    .btn:visited {
+      font-size: 1.4rem;
+      padding: 1.1rem 1.2rem;
+      margin-bottom: 5%; } }
 
 .btn:hover {
   transform: translateY(-3px);
@@ -254,6 +268,9 @@ button.btn--blue {
   font-size: 1.4rem;
   padding: 1rem;
   letter-spacing: 1px; }
+  @media screen and (max-width: 767px) {
+    button.btn--blue {
+      margin-top: 5%; } }
 
 .section-about {
   padding: 24.9rem 0 14.1rem 0;
@@ -321,7 +338,7 @@ button.btn--blue {
   box-shadow: 0 6px 12px 0 rgba(32, 33, 39, 0.08); }
   .chess::after {
     content: "";
-    display: block;
+    display: table;
     clear: both; }
   .chess__block {
     float: left;
@@ -355,7 +372,8 @@ button.btn--blue {
   margin: 0 auto; }
   .video__text-box {
     width: 100%;
-    text-align: center; }
+    text-align: center;
+    margin-bottom: 5rem; }
     .video__text-box > .heading-primary {
       margin-bottom: 1.7rem; }
   .video__button-box {
@@ -364,7 +382,6 @@ button.btn--blue {
     display: inline-block;
     width: 7rem;
     height: 7rem;
-    margin-top: 5.1rem;
     border-radius: 50%;
     background-color: #fff;
     position: relative; }
@@ -789,7 +806,151 @@ textarea:-moz-placeholder {
     width: 90%;
     padding: 5rem; } }
 /* Small phone to small tablet: from 481px to 767px*/
+@media only screen and (max-width: 767px) {
+  p[class$="-ph"] {
+    font-size: 1.3rem; }
+
+  .section-about {
+    padding: 6rem 0; }
+
+  .header__item {
+    display: none; }
+    .header__item--burger {
+      width: 100%;
+      display: inline-block;
+      text-align: right; }
+
+  .header__text {
+    width: 45%;
+    padding: 0 5% 5% 0; }
+
+  .about__left {
+    width: 43%;
+    margin-right: 2%; }
+  .about__right {
+    width: 55%; }
+  .about-box {
+    height: auto; }
+  .about__icon {
+    width: 10rem; }
+  .about__img {
+    width: 85%; }
+
+  .section-chess {
+    padding: 8rem 0; }
+
+  .chess {
+    height: 70rem; }
+    .chess__text-box {
+      width: 90%; }
+
+  .video {
+    width: 80%; }
+    .video__text-box {
+      margin-bottom: 2.5rem; }
+    .video__icon {
+      width: 5rem;
+      height: 5rem; }
+      .video__icon::after {
+        border: 1rem solid transparent;
+        border-left: 1.5rem solid orange; }
+
+  .card__left {
+    width: 32%;
+    margin-right: 3%; }
+  .card__right {
+    width: 65%; }
+  .card-form__select, .card-form__input {
+    width: 40%;
+    height: 3rem;
+    padding: .3rem; }
+  .card-form__label {
+    font-size: 1.3rem; }
+
+  .form__text-box {
+    width: 90%;
+    margin: 0 auto 3rem auto; } }
 /* Small phones: from 0 to 480px*/
+@media only screen and (max-width: 480px) {
+  .header__text {
+    width: 100%;
+    text-align: center; }
+  .header__icon {
+    text-align: left; }
+  .header__img {
+    text-align: left; }
+
+  .tablet {
+    width: 60%;
+    position: static;
+    transform: translateX(33.3%); }
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .about__left, .about__right {
+      float: none;
+      width: 100%; }
+    .about-tablet {
+      width: 60%;
+      margin: 5% auto; }
+
+  .download__left, .download__right {
+    text-align: center;
+    float: none;
+    width: 100%; }
+  .download__left {
+    margin-bottom: 5%; }
+
+  .chess {
+    height: 130rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .chess__block {
+      width: 100%;
+      height: 30%; }
+    .chess__block--grey {
+      height: 20%; }
+      .chess__block--grey:not(:last-child) {
+        border-bottom: 1px solid #ccc; }
+
+  .video {
+    width: 90%; }
+
+  .card__left,
+  .card__right {
+    float: none;
+    width: 100%; }
+
+  .card-form__input {
+    width: 75%; }
+
+  .contact-form {
+    padding: 1.5rem; }
+
+  .span-1-of-2 {
+    width: 100%; }
+
+  .footer {
+    height: 23rem; }
+    .footer__wrap {
+      height: 100%;
+      float: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .footer__wrap::after {
+        content: "";
+        display: block;
+        clear: both; }
+    .footer__logo, .footer__desc {
+      text-align: center;
+      font-size: 2.2rem;
+      margin-bottom: 5%; }
+    .footer__social {
+      height: 4rem; } }
 .header {
   background-image: linear-gradient(to right bottom, rgba(122, 87, 234, 0.2), rgba(49, 185, 246, 0.2)), url("../img/header-bg.jpg");
   background-size: cover; }
