--- a/15-zeplin-appStarter/scss/_queries.scss
+++ b/15-zeplin-appStarter/scss/_queries.scss
@@ -5,9 +5,16 @@
   padding: 0 2%;
 
   &__left {
-    margin-right: 40%;
+    width: 25%;
+    padding-top: 0;
+    margin: 0;
   }
 
+  &__right {
+    width: 75%;
+    padding-top: 0;
+    margin-top: 0;
+  }
   &__top-box {
     width: 100%;
   }
@@ -201,20 +208,74 @@
     padding: 6rem 0;
   }
 
-  .header__item {
-    display: none;
+  .header {
 
-    &--burger {
+    &__top-box {
+      position: relative;
+    }
+
+    &__link, &__item {
+      display: block;
+    }
+
+    &__list {
+      position: absolute;
+      opacity: 0;
       width: 100%;
-      display: inline-block;
-      text-align: right;
+      height: 60vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: rgba(#AEBBFF, .9);
+      top: 7rem;
+      left: 0;
+      z-index: 5;
+      border-radius: 3px;
+    }
+
+    &__item {
+      width: 100%;
+      display: block;
+      height: 12vh;
+
+      &:hover {
+        background-color: rgba($white, .4);
+      }
+    }
+
+    &__link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-transform: uppercase;
+      font-size: 2rem;
 
     }
-  }
 
-  .header__text {
-    width: 45%;
-    padding: 0 5% 5% 0;
+    &__burger {
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 2rem;
+      background-color: rgba(255,255,255, .1);
+      -webkit-transition: background-color .2s;
+      -moz-transition: background-color .2s;
+      -ms-transition: background-color .2s;
+      -o-transition: background-color .2s;
+      transition: background-color .2s;
+
+      &:hover {
+        background-color: rgba(255,255,255, .05);
+
+      }
+    }
+
+    &__text {
+      width: 45%;
+      padding: 0 5% 5% 0;
+    }
+
+
   }
 
   .about {
@@ -310,14 +371,6 @@
       width: 100%;
       text-align: center;
     }
-
-    &__icon {
-      text-align: left;
-    }
-
-    &__img {
-      text-align: left;
-    }
   }
 
   .tablet {
@@ -353,9 +406,7 @@
       width: 100%;
     }
 
-    &__left {
-      margin-bottom: 5%;
-    }
+    &__left { margin-bottom: 5%; }
   }
 
   .chess {
@@ -372,15 +423,11 @@
     &__block--grey {
       height: 20%;
 
-      &:not(:last-child) {
-        border-bottom: 1px solid #ccc;
-      }
+      &:not(:last-child) { border-bottom: 1px solid #ccc; }
     }
   }
 
-  .video {
-    width: 90%;
-  }
+  .video { width: 90%; }
 
   .card__left,
   .card__right {
@@ -388,10 +435,7 @@
     width: 100%;
   }
 
-  .card-form__input {
-    width: 75%;
-
-  }
+  .card-form__input { width: 75%; }
 
   .contact-form {
     padding: 1.5rem;
