--- a/15-zeplin-appStarter/scss/components/_header.scss
+++ b/15-zeplin-appStarter/scss/components/_header.scss
@@ -13,7 +13,7 @@
     float: left;
     width: 10.35%;
     padding-top: 3rem;
-    margin-right: 45.26%;
+    margin-right: 35.26%;
     height: 4rem;
     line-height: 4rem;
   }
@@ -21,7 +21,7 @@
   &__right {
     float: left;
     width: 44.39%;
-    padding-top: 3.5rem;
+    padding-top: 3rem;
   }
 
   &__logo {
@@ -35,6 +35,7 @@
 
   &__nav {
     width: 100%;
+    display: flex;
   }
 
   &__list {
@@ -44,7 +45,7 @@
   }
 
   &__item {
-    width: 13.2rem;
+    width: 11.5rem;
     height: 4rem;
   }
 
@@ -66,6 +67,7 @@
     transition: all .2s;
 
     &--burger {
+      float: right;
       width: 3rem;
     }
 
@@ -107,6 +109,37 @@
     display: inline-block;
     margin-left: -1rem;
     margin-bottom: 3.5rem;
+  }
+
+  &__burger {
+    padding: 2rem 1.5rem;
+    display: inline-block;
+    cursor: pointer;
+  }
+
+  &__strip {
+    width: 1.5rem;
+    height: 1.5px;
+    background-color: white;
+    position: relative;
+
+    &::before,
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 1.5px;
+      background-color: inherit;
+      position: absolute;
+    }
+
+    &::before {
+      top: -.6rem;
+    }
+
+    &::after {
+      bottom: -.6rem;
+    }
   }
 }
 
